--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
-<body>
+<html><head>
+<style>
+  h1 {color: #00f;}
+</style>
+<script></script>
+</head><body>
 <h1>Hoge</h1>
 <p>Index GitHub Pages.</p>
-</body>
-</html>
+<script></script>
+</body><!--Test--></html>
